[package]
name = "transform-gizmo-bevy"
description = "bevy integration for transform-gizmo"
version = "0.4.0"
rust-version = "1.83.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/urholaukkarinen/transform-gizmo"
repository = "https://github.com/urholaukkarinen/transform-gizmo"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
categories = ["gui", "game-development", "game-engines"]
keywords = ["gizmo", "bevy"]
readme = "../../README.md"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "**/*.rs",
    "**/*.wgsl",
    "Cargo.toml",
]

[dependencies]
transform-gizmo = { path = "../transform_gizmo"}

bevy_app = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_core = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_core_pipeline = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_reflect = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_math = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", features = ["mint"], default-features = false }
bevy_render = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_input = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_asset = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_utils = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_pbr = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_ecs = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_log = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_window = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bevy_transform = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor", default-features = false }
bytemuck = "1.5"
uuid = "1.1"

[dev-dependencies]
bevy = { git = "https://github.com/gehud/bevy.git", branch = "bevy_editor" }
