[package]
name = "transform-gizmo-egui"
description = "egui integration for transform-gizmo"
version = "0.4.0"
rust-version = "1.83.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/urholaukkarinen/transform-gizmo"
repository = "https://github.com/urholaukkarinen/transform-gizmo"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
categories = ["gui", "game-development", "game-engines"]
keywords = ["gizmo", "egui"]
readme = "../../README.md"
include = ["../../LICENSE-APACHE", "../../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
transform-gizmo = { path = "../transform-gizmo" }
egui = "0.29"

[dev-dependencies]
eframe = "0.30"
